--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link  rel="stylesheet" href="css/app.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/travel.svg">
     <script src="libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <title>Caravan</title>
 </head>
